--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Hello World!!</h1>
+    
+    <section class="header"></section>
+    <h1>Scott Schneider
+        <p>2028607671
+        </p>
+        <p><schneider_scott@live class="com"></p>
+        <section class="content-body"></section>
+        <div class="content">
+            <h4>Objective</h4>
+        </div>
+        <div class="content">
+            <h4>Education</h4>
+        </div>
+        <div class="content">
+            <h4>Experience</h4>
+        </div>
+        <div class="content">
+            <h4>Volunteer
+
 </body>
 </html>
