group of sections

--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@
         <section class="content-body"></section>
         <div class="content">
             <h4>Objective</h4>
+            <p>Be on time sometimes</p>
         </div>
         <div class="content">
             <h4>Education</h4>
+            <div class="education">
+                <h6>Boise CodeWorks</h6>
+                <p>Dates: .....</p>
+                <ul>
+                    <li>Learned to code</li>
+                    <li>I Heart HTML</li>
+                    <li>The Assistant Insturcter si cool</li>
+                </ul>
+            </div>
+            <div class="education"></div>
         </div>
         <div class="content">
             <h4>Experience</h4>
