--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         </div>
         <div class="content">
             <h4>Experience</h4>
+            <div class="experience">
+                
+            </div>
         </div>
         <div class="content">
             <h4>Volunteer
