added section closing

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     
-    <section class="header"></section>
+    <section class="header">
     <h1>Scott Schneider
         <p>2028607671
         </p>
         <p><schneider_scott@live class="com"></p>
+    </section>
         <section class="content-body"></section>
         <div class="content">
             <h4>Objective</h4>
@@ -34,7 +35,7 @@
         <div class="content">
             <h4>Experience</h4>
             <div class="experience">
-                
+
             </div>
         </div>
         <div class="content">
