fixed section tags

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     
     <section class="header">
+        <img src="https://placehold.it/200x200" alt="">
     <h1>Scott Schneider
-        <p>2028607671
-        </p>
+        <p>2028607671</p>
         <p><schneider_scott@live class="com"></p>
     </section>
-        <section class="content-body"></section>
+        <section class="content-body">
         <div class="content">
             <h4>Objective</h4>
             <p>Be on time sometimes</p>
@@ -40,6 +40,7 @@
         </div>
         <div class="content">
             <h4>Volunteer
+                </section>
 
 </body>
 </html>
