--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     
     <section class="header">
-        <img src="https://placehold.it/200x200" alt="">
+        <img class"m-1"src="https://placehold.it/100x100" alt="">
+        <div class>inline-block</div>
     <h1>Scott Schneider
         <p>2028607671</p>
         <p><schneider_scott@live class="com"></p>
@@ -19,7 +20,7 @@
         <section class="content-body">
         <div class="content">
             <h4>Objective</h4>
-            <p>Be on time sometimes</p>
+            <p>lorem  </p>
         </div>
         <div class="content">
             <h4>Education</h4>
