--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     
     <section class="header">
         <img class"m-1"src="https://placehold.it/100x100" alt="">
-        <div class>inline-block</div>
+        <div class>inline-block
     <h1>Scott Schneider
         <p>2028607671</p>
         <p><schneider_scott@live class="com"></p>
+    </div>
     </section>
         <section class="content-body">
         <div class="content">
